# fastapi-imageSearch

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.docker/: Dockerfile  entrypoint.sh
app/: main.py
app/api/v1/: __init__.py
app/api/v1/agent/: router.py
app/api/v1/agent/image_search/: router.py
app/api/v1/embedding/: router.py
app/api/v1/image_search/: router.py
app/core/: config.py  logging.py
app/core/dependencies/: common.py  image_search.py
app/core/exceptions/: handler.py
app/core/utils/: image.py  url.py
app/domain/modules/vectordb/: qdrant.py
app/domain/services/: agent_service.py  vectordb_service.py
app/domain/services/graph/chat/: builder.py  nodes.py
app/domain/state/: chat_state.py
app/infrastructure/storage/: fruit.py  image.py
app/infrastructure/vectordb/: qdrant.py
app/schemas/: common.py
app/schemas/image_search/: response.py
app/services/: image_search_service.py  vectordb_service.py
app/services/fruit/: point.py  search.py
app/services/point/: fruit.py
app/state/: image_search_state.py
app/worker/: celery_app.py  tasks.py
app/worker/tasks/: __init__.py  add.py  embedding.py
common/constants/: http_code.py
common/exceptions/: handlers.py
common/utils/: image.py  response.py  storage.py
config/: embedding_model.py  settings.py
notebooks/: celery.ipynb  embedding.ipynb  image_serach.ipynb  langgraph.ipynb  similar_image_search.ipynb  test.ipynb
